compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_implied_bounds_boolean.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type b : boolean for _ : b end for"

---
"b"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of boolean
"_"@(FileId(1), 21..22) [Declared]: alias[DefId(LibraryId(0), LocalDefId(0))] of boolean
"<root>"@(dummy) [Declared]: <error>

