compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_implied_bounds_char.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type b : char for _ : b end for"

---
"b"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of char
"_"@(FileId(1), 18..19) [Declared]: alias[DefId(LibraryId(0), LocalDefId(0))] of char
"<root>"@(dummy) [Declared]: <error>

