compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_implied_bounds_enum.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type b : enum(a) for _ : b end for"
---
"b"@(FileId(1), 5..6) [Type]: enum[DefId(LibraryId(0), LocalDefId(1))] ( "a"@(FileId(1), 14..15), )
"b"@(FileId(1), 9..16) [Enum]: <error>
"a"@(FileId(1), 14..15) [EnumVariant]: enum[DefId(LibraryId(0), LocalDefId(1))] ( "a"@(FileId(1), 14..15), )
"_"@(FileId(1), 21..22) [ConstVar(Const, No)]: enum[DefId(LibraryId(0), LocalDefId(1))] ( "a"@(FileId(1), 14..15), )
"<root>"@(dummy) [Module(No)]: <error>

