compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_implied_bounds_real_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type b : real for _ : b end for"

---
"b"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of real
"_"@(FileId(1), 18..19) [Declared]: alias[DefId(LibraryId(0), LocalDefId(0))] of real
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 22..23: mismatched types
| note in file FileId(1) for 22..23: this is of type `b (alias of real)`
| error in file FileId(1) for 22..23: `real` is not an index type
| info: range bound type must be an index type (an integer, `boolean`, `char`, enumerated type, or a range)
