compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_infer_concrete_counter_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "% Both should fail\nfor c : 1.0 .. 1 var k : int := c end for\nfor c : 1 .. 1.0 var k : int := c end for\n"
---
"c"@(FileId(1), 23..24) [ConstVar(Const, No)]: real
"k"@(FileId(1), 40..41) [ConstVar(Var, No)]: int
"c"@(FileId(1), 65..66) [ConstVar(Const, No)]: real
"k"@(FileId(1), 82..83) [ConstVar(Var, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 27..35: mismatched types
| note in file FileId(1) for 34..35: this is of type `{integer}`
| note in file FileId(1) for 27..30: this is of type `real`
| error in file FileId(1) for 27..35: expected index types
| info: range bounds types must both be index types (an integer, `boolean`, `char`, enumerated type, or a range)
error in file FileId(1) at 51..52: mismatched types
| note in file FileId(1) for 51..52: this is of type `real`
| note in file FileId(1) for 44..47: this is of type `int`
| info: `real` is not assignable into `int`
error in file FileId(1) at 69..77: mismatched types
| note in file FileId(1) for 74..77: this is of type `real`
| note in file FileId(1) for 69..70: this is of type `{integer}`
| error in file FileId(1) for 69..77: expected index types
| info: range bounds types must both be index types (an integer, `boolean`, `char`, enumerated type, or a range)
error in file FileId(1) at 93..94: mismatched types
| note in file FileId(1) for 93..94: this is of type `real`
| note in file FileId(1) for 86..89: this is of type `int`
| info: `real` is not assignable into `int`
