compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_infer_left_counter_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "% Biased towards left inference\nvar i : int\nfor c : i .. 1.0 var k : int := c end for\n"

---
"i"@(FileId(1), 36..37) [Declared]: int
"c"@(FileId(1), 48..49) [Declared]: int
"k"@(FileId(1), 65..66) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 52..60: mismatched types
| note in file FileId(1) for 57..60: this is of type `real`
| note in file FileId(1) for 52..53: this is of type `int`
| error in file FileId(1) for 52..60: expected index types
| info: range bounds types must both be index types (an integer, `boolean`, `char`, enumerated type, or a range)
