compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_missing_left_bound.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "for : .. 1 end for"
---
"<root>"@(dummy) [Module(No)]: <error>

